# fastapi_svelte_docker_nginx_unit

./: .gitignore  Dockerfile  Readme.MD  config.json  docker-compose.yml  poetry_to_req.sh  pyproject.toml
backend/: +layout.svelte  requirements.txt
backend/app/: asgi.py
frontend/myspa/: package-lock.json  package.json  svelte.config.js
frontend/myspa/myspa/: package.json
frontend/myspa/src/routes/: +layout.svelte  +page.svelte  Aside.svelte
