[tool.poetry]
name = "webspaapp"
version = "0.1.0"
description = ""
authors = ["anikey.75.31 <anikey.75.31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
fastapi = "^0.105.0"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.1.0.post1"
sqlalchemy = "<2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
